# icloudz

./: .gitignore  README.md  pyproject.toml
icloudz/: auth.py  cli.py  config.py  daemon.py  drive.py  state.py  sync.py  watcher.py
packaging/dh/: build.sh
packaging/dh/debian/: changelog  control
packaging/simple/: build.sh
tests/: conftest.py  test_config.py  test_helpers.py  test_state.py
